--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" type="text/css" href="home.css">
     </head>
 <body>
-
+<div class="top">
+    <p>
+        "Hi"
+    </p>
+</div>
 </body>
 </html>
