Structure of page

--- a/home.html
+++ b/home.html
@@ -6,8 +6,16 @@
 <body>
 <div class="top">
     <p>
-        "Hi"
+        Hi
     </p>
+</div>
+<div class="main">
+    <div class="width-1">
+        content
+    </div>
+    <div class="width-3">
+        content 2
+    </div>
 </div>
 </body>
 </html>
