Site title and borders on width classes

--- a/home.html
+++ b/home.html
@@ -3,11 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="home.css">
     </head>
+    <title>Fred Leatherbarrow</title>
 <body>
 <div class="top">
-    <p>
-        Hi
-    </p>
+    <h2>Fred Leatherbarrow. C# coder and web designer</h2>
 </div>
 <div class="main">
     <div class="width-1">
@@ -15,6 +14,15 @@
     </div>
     <div class="width-3">
         content 2
+    </div>
+    <div class="width-2">
+        content 3
+    </div>
+    <div class="width-1">
+        content 4
+    </div>
+    <div class="width-1">
+        content 5
     </div>
 </div>
 </body>
