--- a/home.html
+++ b/home.html
@@ -8,6 +8,14 @@
 <div class="top">
     <h2>Fred Leatherbarrow. C# coder and web designer</h2>
 </div>
+<div class="nav">
+    <ul>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>Contact</li>
+        <li>CV</li>
+    </ul>
+</div>
 <div class="main">
     <div class="width-1">
         content
