Style Changes, layout of nav bar changes

--- a/home.html
+++ b/home.html
@@ -10,10 +10,10 @@
 </div>
 <div class="nav">
     <ul>
-        <li>Home</li>
-        <li>Projects</li>
-        <li>Contact</li>
-        <li>CV</li>
+        <li class="navComp">Home</li>
+        <li class="navComp">Projects</li>
+        <li class="navComp">Contact</li>
+        <li class="navComp">CV</li>
     </ul>
 </div>
 <div class="main">
