--- a/home.html
+++ b/home.html
@@ -9,12 +9,10 @@
     <h2>Fred Leatherbarrow. C# coder and web designer</h2>
 </div>
 <div class="nav">
-    <ul>
-        <li class="navComp">Home</li>
-        <li class="navComp">Projects</li>
-        <li class="navComp">Contact</li>
-        <li class="navComp">CV</li>
-    </ul>
+        <div class="navComp width-1"><a href="home.html">Home</a></div>
+        <div class="navComp width-1"><a href="home.html">Projects</a></div>
+        <div class="navComp width-1"><a href="home.html">Contact</a></div>
+        <div class="navComp width-1" style="border-right:0;"><a href="home.html">CV</a></div>
 </div>
 <div class="main">
     <div class="width-1">
@@ -33,5 +31,7 @@
         content 5
     </div>
 </div>
+<footer>
+</footer>
 </body>
 </html>
