--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
 </div>
 <div class="nav">
         <div class="navComp width-1"><a href="home.html">Home</a></div>
-        <div class="navComp width-1"><a href="home.html">Projects</a></div>
-        <div class="navComp width-1"><a href="home.html">Contact</a></div>
-        <div class="navComp width-1" style="border-right:0;"><a href="home.html">CV</a></div>
+        <div class="navComp width-1"><a href="projects.html">Projects</a></div>
+        <div class="navComp width-1"><a href="contact.html">Contact</a></div>
+        <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
 </div>
 <div class="main">
     <div class="width-1">
@@ -31,7 +31,5 @@
         content 5
     </div>
 </div>
-<footer>
-</footer>
 </body>
 </html>
