Modifying style of page, shadow under nav

--- a/home.html
+++ b/home.html
@@ -6,14 +6,16 @@
     <title>Fred Leatherbarrow</title>
 <body>
 <div class="top">
-    <h2>Fred Leatherbarrow. C# coder and web designer</h2>
+    <h2>Fred Leatherbarrow <br> C# and web design</h2>
 </div>
 <div class="nav">
         <div class="navComp width-1"><a href="home.html">Home</a></div>
         <div class="navComp width-1"><a href="projects.html">Projects</a></div>
-        <div class="navComp width-1"><a href="contact.html">Contact</a></div>
+        <div class="navComp width-1" href="contact.html"><a href="contact.html">Contact</a></div>
         <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
+        <div class="navShadow"></div>
 </div>
+
 <div class="main">
     <div class="width-1">
         content
