--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,10 @@
     <div class="navComp width-1"><a href="projects.html">Projects</a></div>
     <div class="navComp width-1"><a href="contact.html">Contact</a></div>
     <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
+    <div class="navShadow"></div>
 </div>
 <div class="main">
+    <div class="width-4"> Phone number: 07766339585</div>
 </div>
 </body>
 </html>
