--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
     <div class="navComp width-1"><a href="projects.html">Projects</a></div>
     <div class="navComp width-1"><a href="contact.html">Contact</a></div>
     <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
+    <div class="navShadow"></div>
 </div>
 <div class="main">
 </div>
