--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
     <title>Fred Leatherbarrow</title>
 <body>
 <div class="top">
-    <h2>Fred Leatherbarrow. C# coder and web designer</h2>
+    <h2>Fred Leatherbarrow <br> C# and web design</h2>
 </div>
 <div class="nav">
     <div class="navComp width-1"><a href="home.html">Home</a></div>
