Adding link to PDF to HTML

--- a/cv.html
+++ b/cv.html
@@ -16,6 +16,7 @@
 </div>
 <div class="navShadow"></div>
 <div class="main">
+    <div class="width-4"><a href="Fred Leatherbarrow CV.pdf">Click here for a PDF of my CV</a></div>
 </div>
 </body>
 </html>
