--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Fred Leatherbarrow <br> C# and web design</h2>
 </div>
 <div class="nav">
-        <div class="navComp width-1"><a href="home.html">Home</a></div>
+        <div class="navComp width-1"><a href="index.html">Home</a></div>
         <div class="navComp width-1"><a href="projects.html">Projects</a></div>
         <div class="navComp width-1" href="contact.html"><a href="contact.html">Contact</a></div>
         <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div> 
