Adding content to other pages

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </div>
 <div class="navShadow"></div>
 <div class="main">
-    <div class="width-4"> Phone number: 07766339585</div>
+    <div class="width-4"> Phone: 07766339585 <br> Email: frederickianleatherbarrow@gmail.com</div>
 </div>
 </body>
 </html>
