--- a/index.html
+++ b/index.html
@@ -16,21 +16,12 @@
 </div>
 <div class="navShadow"></div>
 <div class="main">
-    <div class="width-1">
-        content
-    </div>
-    <div class="width-3">
-        content 2
-    </div>
-    <div class="width-2">
-        content 3
-    </div>
-    <div class="width-1">
-        content 4
-    </div>
-    <div class="width-1">
-        content 5
+    <div class="width-4">
+        My name is Fred Leatherbarrow, I am a web designer and C# Programmer experienced in using HTML, CSS, Javascript, Unity, JQuery and more. I've developed this website myself to display my work so that you can see what sorts of skills and projects I do in my free time.
     </div>
 </div>
 </body>
+<footer class="nav">
+
+</footer>
 </html>
