Width classes have their own shadows, can be centered

--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
 </div>
 <div class="navShadow"></div>
-<div class="main">
-    <div class="width-4"> Phone: 07766339585 <br> Email: frederickianleatherbarrow@gmail.com</div>
+<div class="main center">
+    <div class="width-2"> Phone: 07766339585 <br> Email: frederickianleatherbarrow@gmail.com</div>
 </div>
 </body>
 </html>
