--- a/cv.html
+++ b/cv.html
@@ -15,8 +15,8 @@
     <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div>
 </div>
 <div class="navShadow"></div>
-<div class="main">
-    <div class="width-4"><a href="Fred Leatherbarrow CV.pdf">Click here for a PDF of my CV</a></div>
+<div class="main center">
+    <div class="width-2"><a href="Fred Leatherbarrow CV.pdf">Click here for a PDF of my CV</a></div>
 </div>
 </body>
 </html>
