--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,12 @@
 </div>
 <div class="navShadow"></div>
 <div class="main">
+    <div class="width-2">
+        <h2>Plane Battle</h2>
+    </div>
+    <div class="width-2">
+        <h2>This Website</h2>
+    </div>
 </div>
 </body>
 </html>
