Adding images to the projects section

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="home.css">
-    </head>
-    <title>Fred Leatherbarrow</title>
+        <title>Fred Leatherbarrow</title>
+    </head> 
 <body>
 <div class="top">
     <h2>Fred Leatherbarrow <br> C# and web design</h2>
@@ -11,7 +11,7 @@
 <div class="nav">
         <div class="navComp width-1"><a href="index.html">Home</a></div>
         <div class="navComp width-1"><a href="projects.html">Projects</a></div>
-        <div class="navComp width-1" href="contact.html"><a href="contact.html">Contact</a></div>
+        <div class="navComp width-1"><a href="contact.html">Contact</a></div>
         <div class="navComp width-1" style="border-right:0;"><a href="cv.html">CV</a></div> 
 </div>
 <div class="navShadow"></div>
@@ -20,8 +20,8 @@
         My name is Fred Leatherbarrow, I am a web designer and C# Programmer experienced in using HTML, CSS, Javascript, Unity, JQuery and more. I've developed this website myself to display my work so that you can see what sorts of skills and projects I do in my free time.
     </div>
 </div>
-</body>
 <footer class="nav">
 
 </footer>
+</body>
 </html>
