--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,11 @@
 <div class="main">
     <div class="width-2">
         <h2>Plane Battle</h2>
+        <img src="plane-battle.png" alt="plane battle project">
     </div>
     <div class="width-2">
         <h2>This Website</h2>
+        <img src="This Site Image.png" alt="An image of the code for my webiste">
     </div>
 </div>
 </body>
